--- a/ethers-simple-storage/package.json
+++ b/ethers-simple-storage/package.json
@@ -1,5 +1,9 @@
 {
   "dependencies": {
-    "solc": "^0.8.21"
+    "ethers": "^6.6.7",
+    "solc": "0.8.7-fixed"
+  },
+  "scripts": {
+    "compile": "yarn solcjs --bin --abi --include-path node_modules/ --base-path . -o . simpleStorage.sol"
   }
 }
