created basic hardhat project

--- a/hardhat-simple-storage-fcc/package.json
+++ b/hardhat-simple-storage-fcc/package.json
@@ -1,6 +1,10 @@
 {
   "name": "hardhat-simple-storage-fcc",
   "version": "1.0.0",
+  "scripts": {
+    "deplow": "yarn hardhat run scripts/deploy.js --network hardhat",
+    "compile": "yarn solcjs --bin --abi --include-path node_modules/ --base-path . -o . simpleStorage.sol"
+  },
   "main": "index.js",
   "license": "MIT",
   "devDependencies": {
@@ -8,13 +12,14 @@
     "@nomicfoundation/hardhat-ethers": "^3.0.0",
     "@nomicfoundation/hardhat-network-helpers": "^1.0.0",
     "@nomicfoundation/hardhat-toolbox": "^3.0.0",
-    "@nomicfoundation/hardhat-verify": "^1.0.0",
+    "@nomicfoundation/hardhat-verify": "^1.0.4",
     "@typechain/ethers-v6": "^0.4.0",
     "@typechain/hardhat": "^8.0.0",
     "chai": "^4.2.0",
+    "dotenv": "^16.3.1",
     "ethers": "^6.4.0",
     "hardhat": "^2.14.0",
-    "hardhat-gas-reporter": "^1.0.8",
+    "hardhat-gas-reporter": "^1.0.9",
     "solidity-coverage": "^0.8.0",
     "typechain": "^8.1.0"
   }
